# peakdata_code_interview

./: .gitignore  .pre-commit-config.yaml  INSTALLATION.md  Makefile  README.md  TODO.md  pyproject.toml  setup.py
src/peakdata/: captcha_execution.py  data_service.py  pdfunctions.py  proxyhandling.py  webcacheclient.py
tests/integration/: test_webcache.py
tests/unit/: test_webcacheclient.py
